--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ url: "" # the base hostname & protocol for your site, e.g. http://example.com
 # github_username:  jekyll
 
 # Build settings
-remote_theme:  UniFreak/jekyll-theme-textalic
+theme: minima
 plugins:
   - jekyll-feed
 
